clean up  comments

--- a/gpt2/toy_gpt2.ipynb
+++ b/gpt2/toy_gpt2.ipynb
@@ -96,20 +96,20 @@
     "            The linear layer projects each input vector of size n_embd to a vector of size head_size, \n",
     "            resulting in a tensor k with shape (batch_size, sequence_length, head_size).\n",
     "            This tensor k represents the key vectors for the attention mechanism.\"\"\"\n",
-    "        Q = self.Qw(x) # project x to Qw , the output is of dimension B,T, head_size\n",
-    "        K = self.Kw(x) # B,T,head_size\n",
-    "        V = self.Vw(x) # B,T,head_size\n",
+    "        Q = self.Qw(x) # project x to Qw , the output is of dimension batch_size,context_length, head_size\n",
+    "        K = self.Kw(x) # batch_size,context_length,head_size\n",
+    "        V = self.Vw(x) # batch_size,context_length,head_size\n",
     "\n",
     "        \"\"\"Now compute the attention score : the scaled dot product attention formulat is :\n",
     "        Attention (Q,K,V) = softmax(((Q@Kt/sqrt(head_size)))@V\n",
     "        1. compute Q@Kt we transpose the Kt in the last two dimension\n",
     "            this transpose can be achieve by either k.transpose(-2,-1)  - swap the last two dimensions\n",
     "            or we can also use permute , k.permute(0,3)\"\"\"\n",
-    "        out = Q @ K.transpose(-2,-1) # dot product of Q and K , (B,T,head_size) @ (B, head_size,T) --> (B,T,T)\n",
+    "        out = Q @ K.transpose(-2,-1) # dot product of Q and K , (batch_size,context_length,head_size) @ (batch_size, head_size,context_length) --> (batch_size,context_length,context_length)\n",
     "        scaling = K.shape(-1)**0.5 # square root of the head dimension of K\n",
     "        out = out/scaling\n",
     "        out = torch.softmax(out) # softmax of the output\n",
-    "        out = out @ V # (B,T, T) @ (B, T, head_size)--> (B,T,head_size)\n",
+    "        out = out @ V # (batch_size,context_length, context_length) @ (batch_size, context_legth, head_size)--> (batch_size,context_length,head_size)\n",
     "        return out \n",
     "        \n",
     "\n",
@@ -269,31 +269,31 @@
     "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
     "\n",
     "    def forward(self, input_tokens, targets=None):\n",
-    "        batch_size, num_tokens = input_tokens.shape # Batch size x Context_length (max tokens supported)\n",
+    "        batch_size, context_length = input_tokens.shape # Batch size x Context_length (max tokens supported)\n",
     "\n",
-    "        tok_emb = self.token_embedding_table(input_tokens) # Dimension : batch_size, num_tokens, embedding_dimension\n",
+    "        tok_emb = self.token_embedding_table(input_tokens) # Dimension : batch_size, context_length, embedding_dimension\n",
     "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # Dimension : token_size x embedding_dimension\n",
-    "        x = tok_emb + pos_emb # Dimension : batch_size, num_tokens, embedding_dimension\n",
-    "        x = self.self_attention_blocks(x) # Dimension : batch_size, num_tokens, embedding_dimension\n",
-    "        x = self.ln_f(x) # Dimension : batch_size, num_tokens, embedding_dimension \n",
-    "        logits = self.lm_head(x) # Logits -> The raw results , Dimension : batch_size, num_tokens, vocab_size\n",
+    "        x = tok_emb + pos_emb # Dimension : batch_size, context_length, embedding_dimension\n",
+    "        x = self.self_attention_blocks(x) # Dimension : batch_size, context_length, embedding_dimension\n",
+    "        x = self.ln_f(x) # Dimension : batch_size, context_length, embedding_dimension \n",
+    "        logits = self.lm_head(x) # Logits -> The raw results , Dimension : batch_size, context_length, vocab_size\n",
     "\n",
     "        \"\"\"  We need to reshape the logits since the cross entropy loss only accepts m x n format : \n",
-    "             original shape of logits was (batch_size, num_tokens, vocab_size).\n",
+    "             original shape of logits was (batch_size, context_length, vocab_size).\n",
     "             loss functions, such as cross-entropy loss, expect the logits to have a shape of (num_samples, num_classes), where : \n",
-    "             num_samples is the total number of samples (in this case, batch_size * num_tokens) and num_classes is the number of classes (in this case, vocab_size).\n",
-    "             After reshaping, the new shape becomes (batch_size * num_tokens, vocab_size). This effectively flattens the first two dimensions of logits into a single dimension.\n",
+    "             num_samples is the total number of samples (in this case, batch_size * context_length) and num_classes is the number of classes (in this case, vocab_size).\n",
+    "             After reshaping, the new shape becomes (batch_size * context_length, vocab_size). This effectively flattens the first two dimensions of logits into a single dimension.\n",
     "        \"\"\"\n",
     "\n",
     "        if targets is None:\n",
     "            loss = None\n",
     "        else:\n",
-    "            batch_size, num_tokens, vocab_size = logits.shape\n",
-    "            logits = logits.view(batch_size*num_tokens, vocab_size) # reshape to 2D tensor\n",
-    "            targets = targets.view(batch_size*num_tokens) # 1D tensor , with the next token \n",
+    "            batch_size, context_length, vocab_size = logits.shape\n",
+    "            logits = logits.view(batch_size*context_length, vocab_size) # reshape to 2D tensor\n",
+    "            targets = targets.view(batch_size*context_length) # 1D tensor , with the next token \n",
     "            loss = torch.nn.functional.cross_entropy(logits, targets)\n",
     "\n",
-    "        return logits, loss # return logits in Dimension : batch_size*num_tokens, vocab_size, \n",
+    "        return logits, loss # return logits in Dimension : batch_size*context_length, vocab_size, \n",
     "\n",
     "    \"\"\"The generator :\n",
     "        causal next word prediction \n",
