Self attention block and other basic code layout

--- a/gpt2/toy_gpt2.ipynb
+++ b/gpt2/toy_gpt2.ipynb
@@ -272,7 +272,7 @@
     "        batch_size, context_length = input_tokens.shape # Batch size x Context_length (max tokens supported)\n",
     "\n",
     "        tok_emb = self.token_embedding_table(input_tokens) # Dimension : batch_size, context_length, embedding_dimension\n",
-    "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # Dimension : token_size x embedding_dimension\n",
+    "        pos_emb = self.position_embedding_table(torch.arange(context_length, device=device)) # Dimension : token_size x embedding_dimension\n",
     "        x = tok_emb + pos_emb # Dimension : batch_size, context_length, embedding_dimension\n",
     "        x = self.self_attention_blocks(x) # Dimension : batch_size, context_length, embedding_dimension\n",
     "        x = self.ln_f(x) # Dimension : batch_size, context_length, embedding_dimension \n",
